--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -22,9 +22,9 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Mambaforge
+      - name: Code checkout
+        uses: actions/checkout@v3
+      - name: Mambaforge setup
         uses: conda-incubator/setup-miniconda@v2
         with:
           miniforge-variant: Mambaforge
@@ -34,7 +34,7 @@ jobs:
           activate-environment: condabuild
           environment-file: ${{ env.env_yml_path }}/condabuild.yml
           use-mamba: true
-      - name: Build + upload pcgr/pcgrr conda pkgs
+      - name: 🐍 Conda pkg build and upload
         run: |
           conda mambabuild ${recipe_path}/pcgr -c conda-forge -c bioconda --token ${atoken} --quiet
           conda mambabuild ${recipe_path}/pcgrr -c conda-forge -c bioconda --token ${atoken} --quiet
@@ -50,8 +50,8 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Code checkout
+        uses: actions/checkout@v3
       - name: Set up Mambaforge
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -86,8 +86,8 @@ jobs:
       run:
         shell: bash -l {0}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Code checkout
+        uses: actions/checkout@v3
       - name: Set up miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -98,7 +98,7 @@ jobs:
           channels: "pcgr,conda-forge,bioconda"
       - name: Install conda packages
         run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
-      - name: Publish pkgdown website
+      - name: 🌐 Website publish
         run: |
             git config --local user.email "actions@github.com"
             git config --local user.name "GitHub Actions"
@@ -117,16 +117,16 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Code checkout
+        uses: actions/checkout@v3
       - id: pull_lock_commit
-        name: Pull lock commit
+        name: 📥 Pull lock commit
         run: |
             git pull --no-rebase # for pulling in the changed locks
             git --no-pager log --decorate=short --pretty=oneline -n3
             LATEST_COMMIT_HASH="$(git --no-pager log -1 --format='%H')"
             echo "::set-output name=latest_commit_hash::${LATEST_COMMIT_HASH}"
-      - name: Create tag
+      - name: 🔖 Tag creation
         uses: actions/github-script@v5
         env:
           LATEST_COMMIT_HASH: ${{ steps.pull_lock_commit.outputs.latest_commit_hash }}
@@ -141,26 +141,24 @@ jobs:
               sha: the_sha
             })
 
-      # checkout tag from above
-      - name: Checkout code
-        uses: actions/checkout@v2
+      # work with tag from above
+      - name: Code checkout
+        uses: actions/checkout@v3
         with:
           ref: v${{ env.VERSION }}
-      - name: test
-        run: |
-            git --no-pager log --decorate=short --pretty=oneline -n5
-      - name: Set up Docker Buildx
+      - name: Buildx setup
         id: buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: DockerHub login
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build image and push to DockerHub
+      - name: 🐳 Docker img build and push to DockerHub
         uses: docker/build-push-action@v2
         with:
           context: . # yes, dot
           push: true
+          platforms: linux/amd64
           tags: |
             sigven/pcgr:${{ env.VERSION }}
